Update From TakeTwo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(rs)
 option(BUILD_TESTS "Build tests." OFF)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/" ${CMAKE_MODULE_PATH})
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 find_package(PCL 1.7.2 REQUIRED)
 find_package(RSSDK REQUIRED)
@@ -29,6 +30,12 @@ add_library(real_sense
   src/real_sense/real_sense_device_manager.cpp
   src/real_sense_grabber.cpp
   src/io_exception.cpp
+  include/io_exception.h
+  include/real_sense_grabber.h
+  include/buffers.h
+  include/impl/buffers.hpp
+  include/real_sense/real_sense_device_manager.h
+  include/real_sense/time.h
 )
 
 add_executable(real_sense_viewer
